<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/labelSizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sizesLabel"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/spinnerSize"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPizza" />

    <TextView
        android:id="@+id/labelToppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/toppingsLabel"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/toppingGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/sauceGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:checkedButton="@id/buttonTomato"
        app:layout_constraintBottom_toTopOf="@+id/labelToppings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSize"
        app:layout_constraintVertical_bias="0.041">

        <RadioButton
            android:id="@+id/buttonTomato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/tomato"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelSauces" />

        <RadioButton
            android:id="@+id/buttonAlfredo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/alfredo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTomato" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageViewPizza"
        android:layout_width="379dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/buildYourOwnPizza"
        android:src="@drawable/buildyourownpizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerSize"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:layout_below="@id/imageViewPizza"
        android:defaultValue="@string/small"
        android:entries="@array/sizes"
        app:layout_constraintBottom_toTopOf="@+id/toppingGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPizza"
        app:layout_constraintVertical_bias="0.041" />

    <CheckBox
        android:id="@+id/checkboxExtraSauce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerSize"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="@string/extraSauce"
        app:layout_constraintStart_toEndOf="@+id/sauceGroup"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSize" />

    <CheckBox
        android:id="@+id/checkboxExtraCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkboxExtraSauce"
        android:layout_marginStart="104dp"
        android:text="@string/extraCheese"
        app:layout_constraintBottom_toTopOf="@+id/toppingGroup"
        app:layout_constraintStart_toEndOf="@+id/sauceGroup"
        app:layout_constraintTop_toBottomOf="@+id/checkboxExtraSauce"
        app:layout_constraintVertical_bias="0.07" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/toppingGroup"
        android:layout_width="395dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPizza"
        app:layout_constraintVertical_bias="0.741"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSausage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/sausage" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPepperoni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/pepperoni" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipGreenPepper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/greenPepper" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOnion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/onion" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMushroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/mushroom" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/ham" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBlackOlive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/blackOlive" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBeef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/beef" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipShrimp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/shrimp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSquid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/squid" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCrabMeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/crabMeats" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPineapple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/pineapple" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipChicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/chicken" />
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/buttonAddToOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toppingGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:text="@string/addToOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toppingGroup" />

    <TextView
        android:id="@+id/priceLabel"
        android:layout_width="56dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:text="@string/priceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toppingGroup" />

    <EditText
        android:id="@+id/priceValue"
        android:layout_width="124dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:editable="false"
        app:layout_constraintStart_toEndOf="@+id/priceLabel"
        app:layout_constraintTop_toBottomOf="@+id/toppingGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>