<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderNumber"
                android:paddingTop="10dp"
                android:paddingStart="10dp" />

            <Spinner
                android:id="@+id/orderNumbers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingEnd="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:paddingTop="10dp"
                android:paddingStart="10dp" />

            <EditText
                android:id="@+id/orderTotal"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:paddingStart="5dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/pizzaList"
            android:layout_width="match_parent"
            android:layout_height="591dp"
            android:layout_weight="1"
            android:padding="10dp" />

        <Button
            android:id="@+id/cancelOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelOrder"
            android:padding="10dp" />
    </LinearLayout>
</RelativeLayout>
